# tradingview-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  ICC_STRATEGY.md  README.md  SILVER_BULLET_STRATEGY.md  SUPPLY_AND_DEMAND_STRATEGY.md  THE_STRAT_CORE_PRINCIPLES.md
analysis/: 2026-03-31-MNQ-bottom-tick-framework.md  2026-04-22-1326ET.md  2026-04-22-1815ET-overnight-MGC-SIL.md  2026-04-22-2046ET.md  2026-04-22-MGC-MB.md  2026-04-22-MNQ-SB.md  2026-04-23-0823ET.md  2026-04-23-MGC-MB.md  2026-04-23-MNQ-top-tick-framework.md  2026-04-23-SIL-MB.md  2026-04-24-0857ET.md  2026-04-26-2011ET.md  2026-04-26-2229ET.md  2026-04-27-0050ET.md  2026-04-27-0517ET.md  2026-04-27-0834ET.md  2026-04-27-2101ET.md  2026-04-28-0631ET.md  2026-04-28-0636ET.md  2026-04-28-0937ET.md  2026-04-28-1254ET.md  2026-04-28-1440ET.md  (+7 more)
bot/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
bot/pine/: _luxalgo_sb_upstream.pine  _luxalgo_upstream.pine  lux_market_structure_alerter.pine  lux_silver_bullet_alerter.pine
bot/scripts/: replay_alerts.py
bot/service/: auth.py  config.py  db.py  guardrails.py  lifecycle.py  logging.py  main.py  mcp_client.py  models.py  poller.py  schemas.py  sizing.py  state.py  webhook.py
bot/service/silverbullet/: expiry.py  guardrails.py  lifecycle.py  schemas.py  webhook.py
bot/service/tradovate/: client.py  payloads.py  ws.py
bot/tests/: conftest.py  test_guardrails.py  test_lifecycle.py  test_poller.py  test_sb_expiry.py  test_sb_guardrails.py  test_sb_lifecycle.py  test_sb_webhook.py  test_sizing.py  test_webhook.py
(+96 files in other folders)
